docs/envoy/v1.13.0/_sources/api-v3/config/listener/v3/listener_components.proto.rst.txt
.. _envoy_v3_api_file_envoy/config/listener/v3/listener_components.proto:

Listener components
===================

Listener :ref:`configuration overview <config_listeners>`

.. _envoy_v3_api_msg_config.listener.v3.Filter:

config.listener.v3.Filter
-------------------------

`[config.listener.v3.Filter proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/config/listener/v3/listener_components.proto#L22>`_


.. code-block:: json

  {
    "name": "...",
    "typed_config": "{...}"
  }

.. _envoy_v3_api_field_config.listener.v3.Filter.name:

name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The name of the filter to instantiate. The name must match a
  :ref:`supported filter <config_network_filters>`.
  
  
.. _envoy_v3_api_field_config.listener.v3.Filter.typed_config:

typed_config
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) 
  Filter specific configuration which depends on the filter being
  instantiated. See the supported filters for further documentation.
  
  


.. _envoy_v3_api_msg_config.listener.v3.FilterChainMatch:

config.listener.v3.FilterChainMatch
-----------------------------------

`[config.listener.v3.FilterChainMatch proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/config/listener/v3/listener_components.proto#L69>`_

Specifies the match criteria for selecting a specific filter chain for a
listener.

In order for a filter chain to be selected, *ALL* of its criteria must be
fulfilled by the incoming connection, properties of which are set by the
networking stack and/or listener filters.

The following order applies:

1. Destination port.
2. Destination IP address.
3. Server name (e.g. SNI for TLS protocol),
4. Transport protocol.
5. Application protocols (e.g. ALPN for TLS protocol).
6. Source type (e.g. any, local or external network).
7. Source IP address.
8. Source port.

For criteria that allow ranges or wildcards, the most specific value in any
of the configured filter chains that matches the incoming connection is going
to be used (e.g. for SNI ``www.example.com`` the most specific match would be
``www.example.com``, then ``*.example.com``, then ``*.com``, then any filter
chain without ``server_names`` requirements).


.. code-block:: json

  {
    "destination_port": "{...}",
    "prefix_ranges": [],
    "source_type": "...",
    "source_prefix_ranges": [],
    "source_ports": [],
    "server_names": [],
    "transport_protocol": "...",
    "application_protocols": []
  }

.. _envoy_v3_api_field_config.listener.v3.FilterChainMatch.destination_port:

destination_port
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) Optional destination port to consider when use_original_dst is set on the
  listener in determining a filter chain match.
  
  
.. _envoy_v3_api_field_config.listener.v3.FilterChainMatch.prefix_ranges:

prefix_ranges
  (:ref:`config.core.v3.CidrRange <envoy_v3_api_msg_config.core.v3.CidrRange>`) If non-empty, an IP address and prefix length to match addresses when the
  listener is bound to 0.0.0.0/:: or when use_original_dst is specified.
  
  


.. _envoy_v3_api_field_config.listener.v3.FilterChainMatch.source_type:

source_type
  (:ref:`config.listener.v3.FilterChainMatch.ConnectionSourceType <envoy_v3_api_enum_config.listener.v3.FilterChainMatch.ConnectionSourceType>`) Specifies the connection source IP match type. Can be any, local or external network.
  
  
.. _envoy_v3_api_field_config.listener.v3.FilterChainMatch.source_prefix_ranges:

source_prefix_ranges
  (:ref:`config.core.v3.CidrRange <envoy_v3_api_msg_config.core.v3.CidrRange>`) The criteria is satisfied if the source IP address of the downstream
  connection is contained in at least one of the specified subnets. If the
  parameter is not specified or the list is empty, the source IP address is
  ignored.
  
  
.. _envoy_v3_api_field_config.listener.v3.FilterChainMatch.source_ports:

source_ports
  (`uint32 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The criteria is satisfied if the source port of the downstream connection
  is contained in at least one of the specified ports. If the parameter is
  not specified, the source port is ignored.
  
  
.. _envoy_v3_api_field_config.listener.v3.FilterChainMatch.server_names:

server_names
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If non-empty, a list of server names (e.g. SNI for TLS protocol) to consider when determining
  a filter chain match. Those values will be compared against the server names of a new
  connection, when detected by one of the listener filters.
  
  The server name will be matched against all wildcard domains, i.e. ``www.example.com``
  will be first matched against ``www.example.com``, then ``*.example.com``, then ``*.com``.
  
  Note that partial wildcards are not supported, and values like ``*w.example.com`` are invalid.
  
  .. attention::
  
    See the :ref:`FAQ entry <faq_how_to_setup_sni>` on how to configure SNI for more
    information.
  
  
.. _envoy_v3_api_field_config.listener.v3.FilterChainMatch.transport_protocol:

transport_protocol
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If non-empty, a transport protocol to consider when determining a filter chain match.
  This value will be compared against the transport protocol of a new connection, when
  it's detected by one of the listener filters.
  
  Suggested values include:
  
  * ``raw_buffer`` - default, used when no transport protocol is detected,
  * ``tls`` - set by :ref:`envoy.listener.tls_inspector <config_listener_filters_tls_inspector>`
    when TLS protocol is detected.
  
  
.. _envoy_v3_api_field_config.listener.v3.FilterChainMatch.application_protocols:

application_protocols
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If non-empty, a list of application protocols (e.g. ALPN for TLS protocol) to consider when
  determining a filter chain match. Those values will be compared against the application
  protocols of a new connection, when detected by one of the listener filters.
  
  Suggested values include:
  
  * ``http/1.1`` - set by :ref:`envoy.listener.tls_inspector
    <config_listener_filters_tls_inspector>`,
  * ``h2`` - set by :ref:`envoy.listener.tls_inspector <config_listener_filters_tls_inspector>`
  
  .. attention::
  
    Currently, only :ref:`TLS Inspector <config_listener_filters_tls_inspector>` provides
    application protocol detection based on the requested
    `ALPN <https://en.wikipedia.org/wiki/Application-Layer_Protocol_Negotiation>`_ values.
  
    However, the use of ALPN is pretty much limited to the HTTP/2 traffic on the Internet,
    and matching on values other than ``h2`` is going to lead to a lot of false negatives,
    unless all connecting clients are known to use ALPN.
  
  

.. _envoy_v3_api_enum_config.listener.v3.FilterChainMatch.ConnectionSourceType:

Enum config.listener.v3.FilterChainMatch.ConnectionSourceType
-------------------------------------------------------------

`[config.listener.v3.FilterChainMatch.ConnectionSourceType proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/config/listener/v3/listener_components.proto#L73>`_


.. _envoy_v3_api_enum_value_config.listener.v3.FilterChainMatch.ConnectionSourceType.ANY:

ANY
  *(DEFAULT)* ⁣Any connection source matches.
  
  
.. _envoy_v3_api_enum_value_config.listener.v3.FilterChainMatch.ConnectionSourceType.SAME_IP_OR_LOOPBACK:

SAME_IP_OR_LOOPBACK
  ⁣Match a connection originating from the same host.
  
  
.. _envoy_v3_api_enum_value_config.listener.v3.FilterChainMatch.ConnectionSourceType.EXTERNAL:

EXTERNAL
  ⁣Match a connection originating from a different host.
  
  

.. _envoy_v3_api_msg_config.listener.v3.FilterChain:

config.listener.v3.FilterChain
------------------------------

`[config.listener.v3.FilterChain proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/config/listener/v3/listener_components.proto#L168>`_

A filter chain wraps a set of match criteria, an option TLS context, a set of filters, and
various other parameters.

.. code-block:: json

  {
    "filter_chain_match": "{...}",
    "filters": [],
    "use_proxy_proto": "{...}",
    "transport_socket": "{...}"
  }

.. _envoy_v3_api_field_config.listener.v3.FilterChain.filter_chain_match:

filter_chain_match
  (:ref:`config.listener.v3.FilterChainMatch <envoy_v3_api_msg_config.listener.v3.FilterChainMatch>`) The criteria to use when matching a connection to this filter chain.
  
  
.. _envoy_v3_api_field_config.listener.v3.FilterChain.filters:

filters
  (:ref:`config.listener.v3.Filter <envoy_v3_api_msg_config.listener.v3.Filter>`) A list of individual network filters that make up the filter chain for
  connections established with the listener. Order matters as the filters are
  processed sequentially as connection events happen. Note: If the filter
  list is empty, the connection will close by default.
  
  
.. _envoy_v3_api_field_config.listener.v3.FilterChain.use_proxy_proto:

use_proxy_proto
  (`BoolValue <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#boolvalue>`_) Whether the listener should expect a PROXY protocol V1 header on new
  connections. If this option is enabled, the listener will assume that that
  remote address of the connection is the one specified in the header. Some
  load balancers including the AWS ELB support this option. If the option is
  absent or set to false, Envoy will use the physical peer address of the
  connection as the remote address.
  
  

.. _envoy_v3_api_field_config.listener.v3.FilterChain.transport_socket:

transport_socket
  (:ref:`config.core.v3.TransportSocket <envoy_v3_api_msg_config.core.v3.TransportSocket>`) Optional custom transport socket implementation to use for downstream connections.
  To setup TLS, set a transport socket with name `tls` and
  :ref:`DownstreamTlsContext <envoy_v3_api_msg_extensions.transport_sockets.tls.v3.DownstreamTlsContext>` in the `typed_config`.
  If no transport socket configuration is specified, new connections
  will be set up with plaintext.
  
  



.. _envoy_v3_api_msg_config.listener.v3.ListenerFilter:

config.listener.v3.ListenerFilter
---------------------------------

`[config.listener.v3.ListenerFilter proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/config/listener/v3/listener_components.proto#L208>`_


.. code-block:: json

  {
    "name": "...",
    "typed_config": "{...}"
  }

.. _envoy_v3_api_field_config.listener.v3.ListenerFilter.name:

name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The name of the filter to instantiate. The name must match a
  :ref:`supported filter <config_listener_filters>`.
  
  
.. _envoy_v3_api_field_config.listener.v3.ListenerFilter.typed_config:

typed_config
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) 
  Filter specific configuration which depends on the filter being instantiated.
  See the supported filters for further documentation.
  
  

